8001591: NMT: assertion failed: assert(rec->addr() + rec->size() <= cur->base()) failed: Can not overlap in memSnapshot.cpp

NMT should allow overlapping committed regions as long as they belong to the same reserved region

Reviewed-by: dholmes, coleenp